<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    android:background="@android:color/white"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.popular.PopularMovieFragment">

    <ProgressBar
        android:visibility="gone"
        android:layout_gravity="center"
        android:id="@+id/progress_movie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <androidx.recyclerview.widget.RecyclerView
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:id="@+id/rv_movie"
        tools:listitem="@layout/movie_item"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

</LinearLayout>